chore: add chinese translation

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -551,7 +551,7 @@
     "others": {
       "title": "Others",
       "logOut": "Log Out",
-      "credits": "BAID Speaker is developed with a collaboration between WebArtistry and BAID's Academic Sector. Thank you to all contributors."
+      "credits": "The BAID Speaker platform is developed with a collaboration between WebArtistry and BAID's Academic Sector. Thank you to all contributors."
     }
   }
 }
