fix: ui details

--- a/src/app/i18n/locales/zh-CN/studio.json
+++ b/src/app/i18n/locales/zh-CN/studio.json
@@ -397,7 +397,7 @@
   },
   "create": {
     "title": "开始您的下一个讲座",
-    "details": "要开始，请填写以下信息。<1>所有问题均需填写。</1>",
+    "details": "请填写以下信息。<1>所有问题均需填写。</1> <2></2>",
     "form": {
       "title": "您的讲座标题是什么?",
       "contact": "请提供您的微信号或微信绑定的手机号以便我们联系您。",
