--- a/src/app/i18n/locales/zh-CN/studio.json
+++ b/src/app/i18n/locales/zh-CN/studio.json
@@ -323,7 +323,7 @@
       "locationMessage": "这是您的讲座举办地点。",
       "changeStatus": "进入下一阶段",
       "changeStatusMessage": "您确定要将此讲座推进到下一阶段吗? 此操作不可逆。",
-      "surveyQuestions": "调查问卷回答",
+      "surveyQuestions": "讲师调查",
       "preSurveyQ1": "请告诉我们您的讲座内容。",
       "preSurveyQ2": "为什么选择这个主题?"
     },
