feat: like counting, views counting, bottom text

--- a/src/app/i18n/locales/en/core.json
+++ b/src/app/i18n/locales/en/core.json
@@ -7,16 +7,21 @@
     "cta": "Start My Lecture",
     "ctaSide": "... or discover some first.",
     "upcoming": "Upcoming on {{date}}",
-    "stats": "{{live}} live views • {{view}} video views",
-    "statsVideoOnly": "{{view}} video views"
+    "liveViews_one": "{{count}} live view",
+    "liveViews_other": "{{count}} live views",
+    "videoViews_one": "{{count}} video view",
+    "videoViews_other": "{{count}} video views"
   },
   "lecture": {
     "notAssigned": "Not Assigned",
     "host": "Host: ",
     "teacher": "Teacher: ",
     "poster": "Poster Designer: ",
-    "likes": "{{likes}} likes",
-    "views": "{{views}} views",
+    "likes_one": "{{count}} like",
+    "likes_other": "{{count}} likes",
+    "views_one": "{{count}} view",
+    "views_other": "{{count}} views",
+    "youLiked": "(You liked)",
     "share": "Share",
     "survey": "Speaker Survey",
     "slides": "Slides",
