--- a/src/app/i18n/locales/zh-CN/core.json
+++ b/src/app/i18n/locales/zh-CN/core.json
@@ -7,16 +7,21 @@
     "cta": "我也要参加!",
     "ctaSide": "... 也可以先观看一些。",
     "upcoming": "预告: {{date}}",
-    "stats": "{{live}} 名现场观众 • {{view}} 播放",
-    "statsVideoOnly": "{{view}} 播放"
+    "liveViews_one": "{{count}} 名现场观众",
+    "liveViews_other": "{{count}} 名现场观众",
+    "videoViews_one": "{{count}} 播放",
+    "videoViews_other": "{{count}} 播放"
   },
   "lecture": {
     "notAssigned": "未指定",
     "host": "主持人: ",
     "teacher": "指导教师: ",
     "poster": "海报设计师: ",
-    "likes": "{{likes}} 点赞",
-    "views": "{{views}} 播放",
+    "likes_one": "{{count}} 点赞",
+    "likes_other": "{{count}} 点赞",
+    "views_one": "{{count}} 播放",
+    "views_other": "{{count}} 播放",
+    "youLiked": "(您已点赞)",
     "share": "分享",
     "survey": "讲师调查",
     "slides": "幻灯片",
