feat: anonymous commenting

--- a/src/app/i18n/locales/en/core.json
+++ b/src/app/i18n/locales/en/core.json
@@ -42,6 +42,8 @@
     "comment": "Comment",
     "commentPlaceholder": "Share some love!",
     "commentNotes": "Your comment will be visible to all viewers and is associated with your identity. Please be nice!",
-    "delete": "Delete"
+    "delete": "Delete",
+    "anonymous": "Comment Anonymously",
+    "anonComment": "Anonymous"
   }
 }
